tests/baselines/reference/callSignatureWithOptionalParameterAndInitializer(strict=true).errors.txt
callSignatureWithOptionalParameterAndInitializer.ts(3,14): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(4,22): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(5,22): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(15,9): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(19,1): error TS2454: Variable 'c' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(20,1): error TS2454: Variable 'c' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(23,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
callSignatureWithOptionalParameterAndInitializer.ts(23,6): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(23,6): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
callSignatureWithOptionalParameterAndInitializer.ts(24,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
callSignatureWithOptionalParameterAndInitializer.ts(24,20): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(24,20): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
callSignatureWithOptionalParameterAndInitializer.ts(28,1): error TS2454: Variable 'i' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(29,1): error TS2454: Variable 'i' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(30,1): error TS2454: Variable 'i' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(31,1): error TS2454: Variable 'i' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(34,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
callSignatureWithOptionalParameterAndInitializer.ts(34,6): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(34,6): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
callSignatureWithOptionalParameterAndInitializer.ts(35,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
callSignatureWithOptionalParameterAndInitializer.ts(35,9): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(35,9): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
callSignatureWithOptionalParameterAndInitializer.ts(38,1): error TS2454: Variable 'a' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(39,1): error TS2454: Variable 'a' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(40,1): error TS2454: Variable 'a' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(41,1): error TS2454: Variable 'a' is used before being assigned.
callSignatureWithOptionalParameterAndInitializer.ts(44,9): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(45,32): error TS1015: Parameter cannot have question mark and initializer.
callSignatureWithOptionalParameterAndInitializer.ts(45,32): error TS2322: Type 'string' is not assignable to type 'number'.
callSignatureWithOptionalParameterAndInitializer.ts(46,9): error TS1015: Parameter cannot have question mark and initializer.


==== callSignatureWithOptionalParameterAndInitializer.ts (30 errors) ====
    // Optional parameters cannot also have initializer expressions, these are all errors
    
    function foo(x?: number = 1) { }
                 ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    var f = function foo(x?: number = 1) { }
                         ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    var f2 = (x: number, y? = 1) => { }
                         ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    
    foo(1);
    foo();
    f(1);
    f();
    f2(1);
    f2(1, 2);
    
    class C {
        foo(x?: number = 1) { }
            ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    }
    
    var c: C;
    c.foo();
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    c.foo(1);
    ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        (x? = 1);
        ~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
         ~
!!! error TS1015: Parameter cannot have question mark and initializer.
         ~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
        foo(x: number, y?: number = 1);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
                       ~
!!! error TS1015: Parameter cannot have question mark and initializer.
                       ~~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }
    
    var i: I;
    i();
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i(1);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i.foo(1);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    i.foo(1, 2);
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        (x?: number = 1);
        ~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
         ~
!!! error TS1015: Parameter cannot have question mark and initializer.
         ~~~~~~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
        foo(x? = 1);
        ~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            ~
!!! error TS1015: Parameter cannot have question mark and initializer.
            ~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
    }
    
    a();
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a(1);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a.foo();
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    a.foo(1);
    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    var b = {
        foo(x?: number = 1) { },
            ~
!!! error TS1015: Parameter cannot have question mark and initializer.
        a: function foo(x: number, y?: number = '') { },
                                   ~
!!! error TS1015: Parameter cannot have question mark and initializer.
                                   ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        b: (x?: any = '') => { }
            ~
!!! error TS1015: Parameter cannot have question mark and initializer.
    }
    
    b.foo();
    b.foo(1);
    b.a(1);
    b.a(1, 2);
    b.b();
    b.b(1);
    